10/15/2019 - Day One
- Initial code created, randomized recipes and archived into .mcpack

10/16/2019
- Split initial code into functions, improved readability
- Now can load multiple datasets
- Added seeded generation

10/17/2019
- Added automatic updates for those who 'git clone' the repository
    - Will be toggleable later

10/18/2019
- Improved user friendliness
- Added command system
    - Will likely be reworked later into its own module
- Reworked dirs variables
- Reworked a few dirs functions
- No longer hard coding directories
- Now erases temp data on boot if found