@@ -1,7 +1,7 @@
 .git
+.vscode
 __pycache__/
 data/
-newdata/
 *.mcpack
 *.zip
 tmp/
